--- a/test-site/index.html
+++ b/test-site/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset = " utf-8" />
-        <title>Super's Example</title>
+        <meta charset = "utf-8" />
+        <title>Supachai's example page</title> 
     </head>
     <body>
-        <img src = "images/Senitsu.png" width  = "50%"
-        height = "50%" alt = "My test image">
+        <h1>Demon Slayer</h1>
+        <img src = "images/demonSlay.jpg" width  = "100%"
+        height = "100%" alt = "My test image">
+        <p>Main Characters</p>
+
+        <ul>
+            <li>ทันจิโร่ (Tanjiro)</li>
+            <li>เนซึโกะ (Nezuko)</li>
+            <li>เซนอิสซึ (Zenitsu)</li>
+            <li>อิโนะซุเกะ (Inosuke)</li>
+        </ul>
+
+        <h3> <a target="_blank" href="https://kimetsu-no-yaiba.fandom.com/wiki/Kimetsu_no_Yaiba_Wiki">FanWiki</a> </h3>
     </body>
+
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
 </html>
