--- a/test-site/index.html
+++ b/test-site/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset = "utf-8" />
         <title>Supachai's example page</title> 
+        <link href="styles/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>Demon Slayer</h1>
